--- a/package.json
+++ b/package.json
@@ -13,23 +13,27 @@
     "dependencies": {
         "@prisma/client": "^6.2.1",
         "@types/react": "^19.0.2",
+        "@types/sharp": "^0.31.1",
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "heic-convert": "^2.1.0",
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "pg": "^8.11.0",
         "react": "^19.0.0",
         "react-router-dom": "^7.1.1",
-        "react-toastify": "^11.0.2"
+        "react-toastify": "^11.0.2",
+        "sharp": "^0.33.5"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/heic-convert": "^2.1.0",
         "@types/jest": "^29.5.2",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/multer": "^1.4.12",
