--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
         "start": "node dist/app.js",
         "dev": "nodemon src/app.ts",
         "build": "tsc",
-        "test": "jest",
-        "init-db": "ts-node src/scripts/init-db.ts",
+        "test": "jest --config jest.config.js",
+        "test:watch": "jest --watch",
         "test:security": "jest tests/security/phase1.test.ts",
-        "test:security:watch": "jest tests/security/phase1.test.ts --watch"
+        "test:auth": "jest tests/auth/auth.test.ts",
+        "test:services": "jest tests/services/service.test.ts",
+        "init-db": "ts-node src/scripts/init-db.ts"
     },
     "dependencies": {
         "@prisma/client": "^6.2.1",
@@ -31,7 +33,8 @@
         "react": "^19.0.0",
         "react-router-dom": "^7.1.1",
         "react-toastify": "^11.0.2",
-        "sharp": "^0.33.5"
+        "sharp": "^0.33.5",
+        "express-validator": "^7.0.1"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
@@ -40,7 +43,7 @@
         "@types/express-rate-limit": "^5.1.3",
         "@types/heic-convert": "^2.1.0",
         "@types/helmet": "^0.0.48",
-        "@types/jest": "^29.5.2",
+        "@types/jest": "^29.5.0",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/multer": "^1.4.12",
         "@types/node": "^20.17.14",
@@ -54,7 +57,8 @@
         "supertest": "^7.0.0",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.2",
-        "typescript": "^5.7.3"
+        "typescript": "^5.7.3",
+        "@types/express-validator": "^3.0.0"
     },
     "directories": {
         "test": "tests"
