--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
         "test:security": "jest tests/security/phase1.test.ts",
         "test:auth": "jest tests/auth/auth.test.ts",
         "test:services": "jest tests/services/service.test.ts",
-        "init-db": "ts-node src/scripts/init-db.ts"
+        "init-db": "ts-node src/scripts/init-db.ts",
+        "seed-locations": "ts-node src/scripts/seed-locations.ts"
     },
     "dependencies": {
-        "@prisma/client": "^6.2.1",
+        "@prisma/client": "^6.4.1",
         "@types/react": "^19.0.2",
         "@types/sharp": "^0.31.1",
         "axios": "^1.7.9",
@@ -24,6 +25,7 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
+        "express-validator": "^7.0.1",
         "heic-convert": "^2.1.0",
         "helmet": "^8.0.0",
         "joi": "^17.13.3",
@@ -33,14 +35,14 @@
         "react": "^19.0.0",
         "react-router-dom": "^7.1.1",
         "react-toastify": "^11.0.2",
-        "sharp": "^0.33.5",
-        "express-validator": "^7.0.1"
+        "sharp": "^0.33.5"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/express-rate-limit": "^5.1.3",
+        "@types/express-validator": "^3.0.0",
         "@types/heic-convert": "^2.1.0",
         "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.0",
@@ -53,12 +55,11 @@
         "@types/supertest": "^6.0.2",
         "jest": "^29.5.0",
         "nodemon": "^3.1.9",
-        "prisma": "^6.2.1",
+        "prisma": "^6.4.1",
         "supertest": "^7.0.0",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.2",
-        "typescript": "^5.7.3",
-        "@types/express-validator": "^3.0.0"
+        "typescript": "^5.7.3"
     },
     "directories": {
         "test": "tests"
