--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
+        "node-schedule": "^2.1.1",
         "pg": "^8.11.0",
         "react": "^19.0.0",
         "react-router-dom": "^7.1.1",
@@ -49,6 +50,7 @@
         "@types/jsonwebtoken": "^9.0.7",
         "@types/multer": "^1.4.12",
         "@types/node": "^20.17.14",
+        "@types/node-schedule": "^2.1.7",
         "@types/pg": "^8.10.2",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-toastify": "^4.0.2",
