--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
